added removed unessary sections

--- a/References/references.bib
+++ b/References/references.bib
@@ -565,7 +565,40 @@ series = {CCS '13}
 
 
 
-% -----------------------------------------------------------------------------
+% -----------------------------------------------------------------------------------
 
 
-% ------------------------------------------------------------------------
+% -----------------------------------------------------------------------------------
+% --------------------------------- Year 1 Activity ---------------------------------
+
+@inproceedings{Europar2022Paper,
+	title = {Benchmarking {Parallelism} in {Unikernels}},
+	url = {https://github.com/Akilan1999/PhD-public/blob/9a9f3831d25c7b4e196ebf3edb23e1e5ce57b8ca/Conferences/Europar2022/paper.pdf},
+	abstract = {Virtualisation technologies are widely used in Cloud com- puting infrastructures, because they can be provisioned cheaply and quickly to meet demand. The common approaches are either to pack- age a Operating System (OS) as a Virtual Machine, or to container- ise software with an OS kernel. An emerging alternative are unikernels, which are customised kernels to support just one application. Unikernels are lightweight and an applications has sole use of the kernel, which of- fers potential for fast, resource efficient and secure execution. For these reasons, unikernels may be idea for parallel computing in the Cloud. However, the parallel performance of unikernel-based Cloud applications has not been extensively studied. This paper presents an evaluation of the OSv unikernel using a parallelised Mandelbrot benchmark, compar- ing with Docker and a monolithic VM for runtime, parallel speedups and boot-up time. OSv has the fastest boot-up time, and is comparable with the parallel speedups of Docker and the monolithic VM.},
+	urldate = {2022-12-14},
+	author = {Selvacoumar, Akilan},
+	month = dec,
+	year = {2022},
+	note = {original-date: 2022-12-14T20:31:10Z},
+}
+
+@misc{Europar2022Poster,
+	title = {Benchmarking {Parallelism} in {Unikernels}},
+	url = {https://github.com/Akilan1999/PhD-public/blob/9a9f3831d25c7b4e196ebf3edb23e1e5ce57b8ca/Conferences/Europar2022/poster.pdf},
+	urldate = {2022-12-14},
+	author = {Selvacoumar, Akilan},
+	month = dec,
+	year = {2022},
+	note = {original-date: 2022-12-14T20:31:10Z},
+}
+
+@misc{Sisca2022Poster,
+	title = {{PhD} {Activity}},
+	url = {https://github.com/Akilan1999/PhD-public/blob/9a9f3831d25c7b4e196ebf3edb23e1e5ce57b8ca/Conferences/Sisca2022/poster.pdf},
+	abstract = {Benchmarking Unikernels with distributed map reduce.},
+	urldate = {2022-12-14},
+	author = {Selvacoumar, Akilan},
+	month = dec,
+	year = {2022},
+	note = {original-date: 2022-12-14T20:31:10Z},
+}
