--- a/ResearchTimeline/researchTimeline.tex
+++ b/ResearchTimeline/researchTimeline.tex
@@ -4,3 +4,144 @@
 %*******************************************************************************
 
 \chapter{Research Timeline}  %Title of the Research Timeline
+The following chapter talks about the research activity timeline conducted for a duration of 2 and half years. 
+The plan is subject to change based on any deviation which will be attempted to be covered in the risk analysis 
+section. The recent tasks are provided in depth in contrast to later tasks which will be more open ended 
+as it reliant to the results from preceding tasks. 
+
+\subsection{Year 2}
+This section is split by a month by month planner to help keep tracks of tasks. 
+
+\subsubsection{January 2023}
+The high level overview being that most of the setups for the upcoming experiments
+are complete. 
+\begin{enumerate}
+    \item Review of year 1 report submitted 
+    \item Setup test cluster for testing popcorn linux 
+    \item Setup popcorn linux on the test cluster
+    \item Start running existing popcorn linux benchmarks 
+    \item Setup RustyHermit and HermitCore independently with test application 
+    \item Setup Cheri on a QEMU emulator and run a sample C program 
+  \end{enumerate}
+
+
+  \subsubsection{February 2023}
+  \begin{enumerate}
+    \item Deep dive understanding to HEXO fork of popcorn linux source code vice.
+    \item Setup HEXO offload tasks to a uni-kernel on an external machine using hermit-core 
+    and test of 2 more external devices to benchmark the scheduler used by HEXO linux. 
+    \item Start working more on porting HermitTux to RustyHermit and look into 
+    development of Unikraft for support of Cheri and switch into the Unikraft for further 
+    development if there is full support for Cheri. 
+    \item Start drafting a conference paper or journal based on improvements to the HEXO papers 
+    scheduler and support to either RustyHermit or Unikraft. 
+  \end{enumerate}
+
+  \subsubsection{March 2023}
+  \begin{enumerate}
+    \item Start porting either RustyHermit or Unikraft to support the Cheri Architecture. (The following sub-section is assuming 
+          RustyHermit is selected).
+          \begin{enumerate}
+            \item Making a rust based clone of Hermitux on the rust based rusty-hermit. 
+            \item Merging certain C libraries from CheriBSD (or if possible rewriting the C libraries in Rust directly) 
+            with the RustyHermit kernel. 
+          \end{enumerate}
+    \item Investigating having Popcorn modified LLVM C/C++ features with the GHC Haskell compiler. 
+  \end{enumerate}
+
+  \subsubsection{April 2023}
+  \begin{enumerate}
+    \item Continue on making rust based clone of Hermitux on the rust based rusty-hermit and make decision if it's worth going on.
+    \item Continue work on the conference paper based on the improvements of the HEXO paper.
+    \item Get access to the ARM based Cheri Morello
+  \end{enumerate}
+
+  \subsubsection{May 2023}
+  \begin{enumerate}
+     \item Finalize conference paper/journal paper for improvements based on the HEXO paper.
+     \item Start working on merging certain C libraries from CheriBSD (or if possible rewriting the C libraries in Rust directly) 
+     with the RustyHermit kernel.
+  \end{enumerate}
+
+  \subsubsection{June 2023}
+  \begin{enumerate}
+     \item Catch up on the pending tasks not completed listed above. 
+  \end{enumerate}
+
+  \subsubsection{July 2023}
+  \begin{enumerate}
+     \item Starting on writing completed research experiments to the thesis. 
+  \end{enumerate}
+
+  \subsubsection{August 2023}
+  \begin{enumerate}
+    \item Summer break 
+ \end{enumerate}
+
+ \subsubsection{September 2023}
+  \begin{enumerate}
+    \item Start modifying Popcorn Linux for building parts of a program to a TAG based architecture.
+    \item Start looking into ways to find out which parts of a program should be executed on a TAG based architecture (todo reference
+     the paper from popcorn linux on enclaves).
+    \item Start drafting proposals that could be used to potentially take the above features of popcorn linux and make a clone of 
+    base features which can be used in the GHC Haskell compiler.
+ \end{enumerate}
+
+ \subsubsection{October 2023}
+  \begin{enumerate}
+    \item Continue work on implementing Cheri with popcorn linux using Uni-kernels. 
+    \item Start building a test framework to test Cheri with popcorn linux.
+ \end{enumerate}
+
+ \subsubsection{November 2023}
+  \begin{enumerate}
+    \item Reiterate through the literature review and add more background context based on the implementation and experiments 
+    completed.
+    \item Start working on proposal drafted for adding popcorn linux features to the Haskell GHC compiler.
+ \end{enumerate}
+
+ \subsubsection{December 2023}
+  \begin{enumerate}
+    \item Catch up on pending tasks.
+    \item Create benchmark suite for the experiments conducted throughout the year.
+    \item Christmas and new year break.
+ \end{enumerate}
+
+ \subsubsection{January 2024}
+  \begin{enumerate}
+    \item Starting writing a conference paper which combines:
+    \begin{enumerate}
+        \item Multi-kernel approach with a functional language such as Haskell.
+        \item With a scheduler such from the HEXO paper with modification to run on TAG based architecture. 
+      \end{enumerate}
+ \end{enumerate}
+
+ \subsubsection{February 2024}
+  \begin{enumerate}
+    \item Continue work on the conference paper and complete the draft by the month end.
+ \end{enumerate}
+
+ \subsubsection{March 2024}
+  \begin{enumerate}
+    \item PhD writing period begin.
+ \end{enumerate}
+
+ \subsubsection{September 2024}
+  \begin{enumerate}
+    \item PhD writing period end and Phd thesis draft ready.
+ \end{enumerate}
+
+
+
+
+%  \subsubsection{October 2023}
+%   \begin{enumerate}
+%     \item 
+%  \end{enumerate}
+
+
+
+
+
+
+
